apps/kong/aws/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-proxy-ingress
  namespace: kong
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP

    # Listen on both HTTP and HTTPS
    alb.ingress.kubernetes.io/listen-ports: >
      [{"HTTP":80},{"HTTPS":443}]
    # ACM certificate for TLS (replace with your actual ARN)
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:379867927265:certificate/23d473bb-b062-44ee-b097-ee45ac9a89aa
    # Redirect all HTTP traffic to HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-proxy
                port:
                  number: 80
